--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GTKF2E8LM5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GTKF2E8LM5');
+</script>
 		<title>Redirecting...</title>
 		<meta http-equiv="refresh" content="0;url=https://smolinskamila.github.io/portfolio/">
 	</head>
