Change to ascii letters

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 
 
-<h3 class="wp-block-heading has-text-align-center"><em>Kamila Smolińska</em></h3>
+<h3 class="wp-block-heading has-text-align-center">Kamila Smolinska</h3>
 
 
 
